--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,15 +2,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    android:padding="20dip"
+    android:paddingLeft="20dip"
+    android:paddingRight="20dip"
+    android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/percentage_text_view"
+        android:id="@+id/scaled_x"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dip"/>
+    <TextView
+        android:id="@+id/scaled_y"
+        android:layout_toRightOf="@id/scaled_x"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/raw_x"
+        android:layout_below="@id/scaled_x"
+        android:layout_alignParentLeft="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dip"/>
+
+    <TextView
+        android:id="@+id/raw_y"
+        android:layout_toRightOf="@id/raw_x"
+        android:layout_below="@id/scaled_y"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/angle"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/raw_x"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dip"/>
+    <TextView
+        android:id="@+id/quadrant"
+        android:layout_below="@id/raw_y"
+        android:layout_toRightOf="@id/angle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
